browse and submit butons

--- a/modules/must-FrontEndJS/web/index.html
+++ b/modules/must-FrontEndJS/web/index.html
@@ -17,6 +17,12 @@
         <h2>Login</h2>
         <button id="login-button">Login with Amazon Cognito</button>
     </div>
+    <div>
+        <input type="file" id="fileUpload">
+    </div>
+    <div>
+    <button onclick="uploadFile()">Submit</button>
+    </div>
     <div id="document-selection" style="display: none;">
         <h2>Select a Document</h2>
         <select id="document-dropdown"></select>
