--- a/modules/must-FrontEndJS/web/index.html
+++ b/modules/must-FrontEndJS/web/index.html
@@ -23,6 +23,7 @@
     <div>
     <button onclick="uploadFile()">Submit</button>
     </div>
+    <progress max=”100” value=”0”></progress>
     <div id="document-selection" style="display: none;">
         <h2>Select a Document</h2>
         <select id="document-dropdown"></select>
