--- a/modules/must-FrontEndJS/web/index.html
+++ b/modules/must-FrontEndJS/web/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>Space Shuttle Sign-Up</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="scripts.js"></script>
 </head>
 <body>
     <header>
