adding web functionalities pt2

--- a/modules/must-FrontEndJS/web/index.html
+++ b/modules/must-FrontEndJS/web/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="container">
         <div class="shuttle-image">
-            <img src="spaceshuttle.jpg" alt="Space Shuttle">
+            <img src="blueorigins.png" alt="Space Shuttle">
         </div>
         <div class="form-container">
             
@@ -36,7 +36,7 @@
             
                 <h1>Space Shuttle Sign-Up</h1>
                 <input type="text" name="username" placeholder="Enter your Name">
-                <button id="submit-button" type="submit">Sign Up</button>
+                <button id="submit-button" type="button">Sign Up</button>
             </form>
         </div>
     </div>
