changing some logic

--- a/modules/must-FrontEndJS/web/index.html
+++ b/modules/must-FrontEndJS/web/index.html
@@ -26,12 +26,7 @@
             
             <form>
                 <div class="image-upload-container">
-                    <input type="file" id="image-upload" accept="image/*">
-                    <label for="image-upload" class="custom-file-upload">
-                        <i class="fas fa-cloud-upload-alt"></i> Choose Image
-                    </label>
-                    <p>Selected Image:</p>
-                    <img id="selected-image" src="#" alt="Selected Image">
+                    <input type="file" name="uploader" id="image-upload"accept="image/*" capture="camera">
                 </div>
             
                 <h1>Space Shuttle Sign-Up</h1>
