--- a/modules/must-FrontEndJS/web/index.html
+++ b/modules/must-FrontEndJS/web/index.html
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Document Management</title>
+    <title>Space Shuttle Sign-Up</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aws-sdk/2.1106.0/aws-sdk.min.js"></script>
     <script src="scripts.js"></script>
-    
 </head>
 <body>
-    <div id="logo-container">
-        <img id="logo" src="your_logo.webp" alt="Your Logo">
-    </div>
-    <div id="login-container">
-        <h2>Login</h2>
-        <button id="login-button">Login with Amazon Cognito</button>
-    </div>
-    <div id="document-selection" style="display: none;">
-        <h2>Select a Document</h2>
-        <select id="document-dropdown"></select>
-        <button id="open-document-button">Open Document</button>
-        <div id="search-container" style="display: none;">
-            <input type="text" id="search-input" placeholder="Search in Document">
-            <button id="search-button">Search</button>
+    <header>
+        <div id="navigation">
+            <div id="change-user">Change User</div>
+        </div>
+    </header>
+    <div id="loading-overlay" class="overlay">
+        <div class="overlay-content">
+            <div class="loading-spinner"></div>
+            <p>Loading while we are processing your image...</p>
         </div>
     </div>
-    <div id="search-results-container"></div>
+    <div class="container">
+        <div class="shuttle-image">
+            <img src="blueorigins.png" alt="Space Shuttle">
+        </div>
+        <div class="form-container">
+            
+            <form>
+                <div class="image-upload-container">
+                    <input type="file" id="image-upload" accept="image/*">
+                    <label for="image-upload" class="custom-file-upload">
+                        <i class="fas fa-cloud-upload-alt"></i> Choose Image
+                    </label>
+                    <p>Selected Image:</p>
+                    <img id="selected-image" src="#" alt="Selected Image">
+                </div>
+                <button id="submit-button" type="button">Sign Up</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
